# bip-rs

bip_metainfo/: Cargo.toml
bip_metainfo/src/: accessor.rs  lib.rs  metainfo.rs
bip_metainfo/src/builder/: buffer.rs  mod.rs  worker.rs
bip_util/: Cargo.toml
bip_util/src/sha/: mod.rs
