[package]
name             = "bip_metainfo"
version          = "0.12.1"
description      = "Parsing and building of bittorrent metainfo files"

authors          = ["Andrew <amiller4421@gmail.com>", "Seth Wright <seth@crosse.org>"]

homepage         = "https://github.com/Crosse/bip-rs"
repository       = "https://github.com/Crosse/bip-rs/tree/master/bip_metainfo"
documentation    = "https://docs.rs/bip_metainfo/"

keywords         = ["metainfo", "torrent", "file", "bittorrent"]

license          = "MIT/Apache-2.0"

[dependencies]
bip_bencode      = { version = "0.4" }
bip_util         = { git = "https://github.com/Crosse/bip-rs" }
crossbeam        = "0.8"
walkdir          = "2.0"
error-chain      = "0.12"

[dev-dependencies]
chrono           = "0.4"
rand             = "0.3"
pbr              = "1.0"

[features]
unstable         = []

[profile.bench]
opt-level        = 3
debug            = false
rpath            = false
lto              = false
debug-assertions = false
codegen-units    = 1
panic            = 'unwind'
